        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=46326
        Crash when trying to create a NodeIterator rooted at a document-less DocumentType node

        Test: fast/dom/node-iterator-with-doctype-root.html

        * dom/Document.cpp: (WebCore::Document::detachNodeIterator): Added a comment explaining that
        attach/detach may not always be paired.

        * dom/NodeIterator.cpp:
        (WebCore::NodeIterator::NodeIterator): Don't try to register with the document if there is none.
        (WebCore::NodeIterator::~NodeIterator): Ditto.
        (WebCore::NodeIterator::detach): Ditto.
        (WebCore::NodeIterator::updateForNodeRemoval): There should be a document if we're getting a
        notification.



Canonical link: https://commits.webkit.org/58894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68195 268f45cc-cd09-0410-ab3c-d52691b4dbfc