WebCore/dom/NodeIterator.cpp
@@ -76,12 +76,16 @@ NodeIterator::NodeIterator(PassRefPtr<Node> rootNode, unsigned whatToShow, PassR
     , m_referenceNode(root(), true)
     , m_detached(false)
 {
-    root()->document()->attachNodeIterator(this);
+    // Document type nodes may have a null document. But since they can't have children, there is no need to listen for modifications to these.
+    ASSERT(root()->document() || root()->nodeType() == Node::DOCUMENT_TYPE_NODE);
+    if (Document* ownerDocument = root()->document())
+        ownerDocument->attachNodeIterator(this);
 }
 
 NodeIterator::~NodeIterator()
 {
-    root()->document()->detachNodeIterator(this);
+    if (Document* ownerDocument = root()->document())
+        ownerDocument->detachNodeIterator(this);
 }
 
 PassRefPtr<Node> NodeIterator::nextNode(ScriptState* state, ExceptionCode& ec)
@@ -144,7 +148,8 @@ PassRefPtr<Node> NodeIterator::previousNode(ScriptState* state, ExceptionCode& e
 
 void NodeIterator::detach()
 {
-    root()->document()->detachNodeIterator(this);
+    if (Document* ownerDocument = root()->document())
+        ownerDocument->detachNodeIterator(this);
     m_detached = true;
     m_referenceNode.node.clear();
 }
@@ -159,6 +164,7 @@ void NodeIterator::updateForNodeRemoval(Node* removedNode, NodePointer& referenc
 {
     ASSERT(!m_detached);
     ASSERT(removedNode);
+    ASSERT(root()->document());
     ASSERT(root()->document() == removedNode->document());
 
     // Iterator is not affected if the removed node is the reference node and is the root.
